# SoapyRTLSDR

./: .travis.yml  CMakeLists.txt  Changelog.txt  CheckAtomic.cmake  LICENSE.txt  README.md  Registation.cpp  Registration.cpp  Settings.cpp  SoapyRTLSDR.hpp  Streaming.cpp
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
